Rename handlers to better naming convention
